--- a/Criando o primeiro App/agenda/app/src/main/res/layout/activity_cadastro.xml
+++ b/Criando o primeiro App/agenda/app/src/main/res/layout/activity_cadastro.xml
@@ -15,8 +15,8 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="@string/cadastro_nome"
-        android:textColorHint="@color/black"
-        android:textColor="@color/black"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,20 +32,11 @@
         android:inputType="textPersonName"
         android:hint="@string/cadastro_idade"
         android:layout_marginTop="16dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cadastro_nome" />
 
-    <Button
-        android:id="@+id/cadastro_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/cadastrar_btn"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cadastro_idade" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
