--- a/Criando o primeiro App/agenda/app/src/main/res/layout/activity_main.xml
+++ b/Criando o primeiro App/agenda/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ui.MainActivity">
 
     <ListView
@@ -21,7 +22,6 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/main_fab"
         android:src="@drawable/ic_baseline_add_24"
-        android:backgroundTint="@color/purple_500"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="16dp"
