--- a/Criando o primeiro App/agenda/app/src/main/res/layout-v21/activity_main.xml
+++ b/Criando o primeiro App/agenda/app/src/main/res/layout-v21/activity_main.xml
@@ -23,10 +23,10 @@
         android:src="@drawable/ic_baseline_add_24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginEnd="16dp"
+        android:contentDescription="@string/todo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
