--- a/Criando o primeiro App/agenda/app/src/main/res/layout/activity_cadastro.xml
+++ b/Criando o primeiro App/agenda/app/src/main/res/layout/activity_cadastro.xml
@@ -20,7 +20,8 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:importantForAutofill="no" />
 
     <EditText
         android:id="@+id/cadastro_idade"
@@ -36,7 +37,8 @@
         android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cadastro_nome" />
+        app:layout_constraintTop_toBottomOf="@+id/cadastro_nome"
+        android:importantForAutofill="no" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
