--- a/Criando o primeiro App/agenda/app/src/main/res/layout/activity_main.xml
+++ b/Criando o primeiro App/agenda/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginEnd="16dp"
+        android:contentDescription="@string/todo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
