--- a/Criando o primeiro App/agenda/app/src/main/res/menu/salvar_aluno.xml
+++ b/Criando o primeiro App/agenda/app/src/main/res/menu/salvar_aluno.xml
@@ -4,5 +4,5 @@
     <item android:id="@+id/activity_formulario_aluno_menu_salvar"
         app:showAsAction="always"
         android:icon="@drawable/ic_baseline_done_24"
-        android:title="Salvar o aluno"/>
+        android:title="@string/salvar_aluno"/>
 </menu>
