--- a/2. Layouts Complexos/Viagens/app/src/main/res/layout/activity_lista_pacotes.xml
+++ b/2. Layouts Complexos/Viagens/app/src/main/res/layout/activity_lista_pacotes.xml
@@ -11,7 +11,7 @@
         android:contentDescription="@string/default_cv"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="@color/purple_700"
+        android:background="@color/colorAccent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
